<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aokp="http://schemas.android.com/apk/res/com.aokp.romcontrol">

    <PreferenceCategory
        android:key="aokp"
        android:title="@string/aokp">

        <Preference
            android:key="aokp_website"
            android:title="@string/aokp_website_title"
            android:summary="@string/aokp_website_summary" />

        <Preference
            android:key="aokp_irc"
            android:title="@string/aokp_irc_title"
            android:summary="@string/aokp_irc_summary" />

        <com.aokp.romcontrol.widgets.DeveloperPreference
            android:title="AOKP"
            aokp:nameDev="AOKP"
            aokp:twitterHandle="AOKP_ROM"/>

    </PreferenceCategory>
</PreferenceScreen>
